job: Add missing send_reply debug messages

GVfsJobQueryInfoRead and GVfsJobQueryInfoWrite doesn't print debug
info in send_reply as other jobs. Let's add the missing debug messages.

https://bugzilla.gnome.org/show_bug.cgi?id=794487